# Abrase

./: .gitignore  Cargo.toml  README.md  test_debug.rs  todo.md
crates/abrase/: Cargo.toml  README.md
crates/abrase-cli/: Cargo.toml  README.md
crates/abrase-cli/benches/: throughput.rs  transpile.rs
crates/abrase-cli/src/: host.rs  lib.rs  main.rs
crates/abrase-cli/tests/: bytecode_tests.rs  cli_int32_integration_tests.rs  cli_no_built_in_integration_tests.rs  compiler_arithmetic_tests.rs  compiler_arrays_tests.rs  compiler_codegen_common.rs  compiler_comparisons_tests.rs  compiler_control_flow_tests.rs  compiler_effects_tests.rs  compiler_exceptions_tests.rs  compiler_functions_tests.rs  compiler_int32_mode_tests.rs  compiler_literals_tests.rs  compiler_logical_ops_tests.rs  compiler_loop_region_tests.rs  compiler_match_arm_rc_tests.rs  compiler_match_tests.rs  compiler_multi_module_tests.rs  compiler_multishot_resume_tests.rs  compiler_ownership_tests.rs  compiler_records_tests.rs  compiler_special_tests.rs  compiler_static_dominance_tests.rs  compiler_tag_tests.rs  compiler_tail_resume_tests.rs  compiler_typed_ld_tests.rs  compiler_variables_tests.rs  debug_line_tests.rs  debug_trace_tests.rs  fuzz_correctness_tests.rs  host_robustness_tests.rs  integration_tests.rs  mem_safe_fuzz_tests.rs  myriad_builtin_tests.rs  myriad_device_tests.rs  negative_tests.rs  region_shared_tests.rs  regression_tests.rs  rejection_fuzz_tests.rs  rfc_region_shared_tests.rs  (+1 more)
crates/abrase-cli/tests/scripts/: array_index_method.abe  built_ins.abe  closures_complex.abe  const_decl.abe  destructuring.abe  effect_dispatch.abe  effect_handlers.abe  effect_resume_paths.abe  field_assign.abe  generics.abe  handler_let_mut_cell.abe  int32_in_range.abe  int32_out_of_range.abe  memory.abe  multi_effect.abe  multi_effect_handler.abe  multi_shot_resume.abe  no_builtin_pure.abe  no_builtin_uses_print.abe  shared_deref_write.abe  static_drop.abe  static_float_array_accumulate.abe  static_init_call.abe  static_mut.abe  static_update_frames.abe
crates/abrase-wasm/: Cargo.toml
crates/abrase-wasm/src/: lib.rs
crates/abrase-wasm/tests/: api_tests.rs
crates/abrase/src/: ast.rs  error.rs  lexer.rs  lib.rs  lint.rs  loader.rs  main.rs  safety.rs  ty.rs
crates/abrase/src/compiler/: builtins.rs  closures.rs  dataflow.rs  debug.rs  effects.rs  handlers.rs  hir.rs  impls.rs  inline.rs  licm.rs  liveness.rs  lower.rs  mod.rs  mod.rs.bak  mono.rs
crates/abrase/src/compiler/codegen/: arith.rs  calls.rs  closure_expr.rs  control.rs  data.rs  effects.rs  inference.rs  match_arm.rs  mod.rs  scaffold.rs
crates/abrase/src/myriad/: builtins.rs  host.rs  interpreter.rs  loader.rs  memory.rs  mod.rs  value.rs
crates/abrase/src/myriad/devices/: system.rs
crates/abrase/src/parser/: core.rs  decl.rs  expr.rs  helpers.rs  mod.rs  pattern.rs  precedence.rs  stmt.rs  types.rs
crates/abrase/src/typeck/: decl.rs  effects.rs  expr.rs  mod.rs  ownership.rs  pattern.rs  privacy.rs  traits.rs  types.rs
crates/abrase/src/typeck/expr/: call.rs  closure.rs  data.rs  escape.rs  handle.rs  loop.rs  match.rs  mod.rs  op.rs
crates/abrase/tests/: bnf_tests.rs  closure_analysis_tests.rs  compiler_arrays_tests.rs  compiler_comparisons_tests.rs  compiler_control_flow_tests.rs  compiler_effects_tests.rs  compiler_functions_tests.rs  compiler_ownership_tests.rs  compiler_records_tests.rs  compiler_variants_tests.rs  dataflow_analysis_tests.rs  handle_lowering_tests.rs  impl_lower_tests.rs  integration_tests.rs  linter_fuzz_tests.rs  loader_tests.rs  myriad_device_tests.rs  myriad_interpreter_tests.rs  myriad_memory_tests.rs  myriad_region_tests.rs  parser_decl_tests.rs  parser_expr_tests.rs  parser_fuzz_tests.rs  parser_handle_tests.rs  parser_program_tests.rs  parser_static_tests.rs  parser_stmt_tests.rs  parser_tests.rs  parser_type_tests.rs  rfc_region_shared_tests.rs  safety_oracle_tests.rs  typeck_decl_tests.rs  typeck_effect_tests.rs  typeck_expr_tests.rs  typeck_handler_resume_tests.rs  typeck_import_tests.rs  typeck_lint_tests.rs  typeck_loader_tests.rs  typeck_loop_escape_tests.rs  typeck_mixed_effect_handle_tests.rs  (+9 more)
crates/abrase/tests/fixtures/loader/: piano.abe  visuals.abe
crates/abrase/tests/fixtures/loader/cycle/: a.abe  b.abe
crates/abrase/tests/fixtures/loader/diamond/: leaf.abe  left.abe  right.abe  top.abe
crates/abrase/tests/fixtures/loader/missing/: main.abe
crates/abrase/tests/fixtures/loader/mod_redundant/: main.abe  state.abe
crates/abrase/tests/fixtures/loader/name_collision/: lib.abe  main.abe
crates/abrase/tests/scripts/: closures.abe  memory.abe  region.abe  traits_generics.abe
crates/myriad/: Cargo.toml  README.md
crates/myriad/src/: aot.rs  builtins.rs  debug.rs  device.rs  frame.rs  host.rs  interpreter.rs  lib.rs  loader.rs  memory.rs  region.rs  snapshot.rs  value.rs
crates/myriad/src/devices/: clock.rs  console.rs  hostfunc.rs  mod.rs  random.rs  system.rs
crates/myriad/src/interpreter/: effect.rs  frame.rs  mod.rs  register.rs
crates/myriad/tests/: console_device_tests.rs  frame_tests.rs  host_extension_tests.rs  loader_tests.rs  myriad_dispatch_tests.rs  myriad_handler_memory_tests.rs  myriad_interpreter_tests.rs  myriad_memory_tests.rs  myriad_region_tests.rs  no_std_path_tests.rs  system_device_tests.rs
crates/polka/: Cargo.toml  README.md
crates/polka-rustc/: Cargo.toml
crates/polka-rustc/src/: embed.rs  hybrid.rs  lib.rs
crates/polka-rustc/tests/: diff.rs  diff_call.rs  diff_e2e.rs  diff_float.rs  diff_heap.rs  diff_integer.rs  diff_region.rs  diff_strconst.rs
crates/polka-rustc/tests/common/: mod.rs
crates/polka-rustc/tests/diff/: call.rs  common.rs  e2e.rs  effect.rs  float.rs  float_ref.rs  heap.rs  hybrid.rs  integer.rs  region.rs  strconst.rs
crates/polka-transpiler/: Cargo.toml
crates/polka-transpiler/src/: lib.rs
crates/polka-transpiler/tests/: differential.rs
crates/polka/src/: cartridge.rs  lib.rs  value.rs
crates/polka/tests/: polka_cart_tests.rs  polka_lib_tests.rs  polka_value_tests.rs
examples/: ackermann.abe  calc.abe  lambda.abe  (+10 more)
(+221 files in other folders)
