[workspace]
resolver = "2"
members = [
	"crates/abrase",
	"crates/polka",
	"crates/myriad",
	"crates/polka-rustc",
	"crates/abrase-cli",
	"crates/abrase-wasm"
]

[workspace.package]
version = "0.1.2"
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["knh190"]
repository = "https://github.com/KHN190/Abrase"
homepage = "https://github.com/KHN190/Abrase"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
