[package]
name = "abrase-wasm"
description = "WebAssembly bindings for the Abrase language (browser playground)."
publish = false
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
homepage.workspace     = true

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
abrase = { path = "../abrase", version = "=0.2.0" }
myriad = { package = "myriad-rs", path = "../myriad", version = "=0.2.0" }
polka  = { package = "polka-rs", path = "../polka", version = "=0.2.0" }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
