[package]
name = "abrase"
description = "Abrase language."
keywords = ["compiler", "language", "abrase", "algebraic-effects"]
categories = ["compilers", "parser-implementations"]
readme = "README.md"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
homepage.workspace     = true

[lib]
doctest = false

[dependencies]
polka = { path = "../polka", version = "0.1.0" }
