[package]
name = "myriad"
description = "VM runtime for Polka bytecode, computation core."
keywords = ["vm", "interpreter", "runtime", "bytecode", "abrase"]
categories = ["compilers", "emulators", "embedded", "vm", "interpreter"]
readme = "README.md"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
homepage.workspace     = true

[lib]
doctest = false

[dependencies]
polka = { path = "../polka", version = "0.1.0" }
