[package]
name = "polka-rustc"
description = "Compiles Polka bytecode to standalone Rust source (trusted-tier AOT backend)."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
homepage.workspace     = true

[lib]
name = "polka_rustc"
doctest = false

[[bin]]
name = "abrc"
path = "src/bin/abrc.rs"

[dependencies]
polka = { package = "polka-rs", path = "../polka", version = "=0.2.0" }

[dev-dependencies]
myriad = { package = "myriad-rs", path = "../myriad", version = "=0.2.0" }
abrase = { path = "../abrase", version = "=0.2.0" }
