[package]
name = "polka-transpiler"
description = "Transpiles Polka bytecode to standalone Rust source (trusted-tier AOT path)."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
homepage.workspace     = true

[lib]
doctest = false

[dependencies]
polka = { package = "polka-rs", path = "../polka", version = "=0.1.2" }

[dev-dependencies]
myriad = { package = "myriad-rs", path = "../myriad", version = "=0.1.2" }
