[package]
name = "polka"
description = "Bytecode schema for the Myriad runtime (Abrase language)."
keywords = ["bytecode", "vm", "compiler", "interpreter", "abrase"]
categories = ["compilers", "encoding"]
readme = "README.md"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
homepage.workspace     = true

[lib]
doctest = false

[dependencies]
