[package]
name = "polka-rs"
description = "Bytecode schema for the Myriad runtime (Abrase language)."
keywords = ["bytecode", "vm", "compiler", "interpreter", "abrase"]
categories = ["compilers", "encoding"]
readme = "README.md"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
homepage.workspace     = true

# Registry name is `polka-rs` (the bare `polka` was taken). Rust import path
# stays `polka` so downstream `use polka::*` and intra-workspace path deps
# don't change — see each downstream Cargo.toml's `package = "polka-rs"`.
[lib]
name = "polka"
doctest = false

[dependencies]
